# EasyORM

./: .gitignore  CMakeLists.txt
include/: args.h
proto/: CMakeLists.txt  config.proto  database_config.proto
src/: CMakeLists.txt  args.cpp  main.cpp
